[package]
name = "server"
version = "0.2.0"
authors = ["too"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
futures-cpupool = "0.1"
tokio-timer = "0.1"

tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }

# database support with connection pooling
r2d2 = "0.7"
r2d2_postgres = "0.11"

# misc support for thread pools, random numbers, and json

rand = "0.3"
rustc-serialize = "0.3"